package com.yonatankarp.adapter

/**
 * The interface expected by the client.
 *
 * A rowing boat is rowed to move.
 */
interface RowingBoat {
    fun row()
}
